// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display correctly for a file 1`] = `
<div
  className="pull-right"
>
  <div
    className="measure-details-page-actions"
  >
    <DeferredSpinner
      loading={false}
      timeout={100}
    >
      <i
        className="spinner-placeholder"
      />
    </DeferredSpinner>
  </div>
</div>
`;

exports[`should display correctly for a file 2`] = `
<div
  className="pull-right"
>
  <span
    className="note spacer-right"
  >
    <span>
      <span
        className="shortcut-button little-spacer-right"
      >
        j
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        k
      </span>
      component_measures.to_navigate_files
    </span>
  </span>
  <div
    className="measure-details-page-actions"
  >
    <DeferredSpinner
      loading={false}
      timeout={100}
    >
      <i
        className="spinner-placeholder"
      />
    </DeferredSpinner>
    <FilesCounter
      className="spacer-left"
      total={10}
    />
  </div>
</div>
`;

exports[`should display correctly for a project 1`] = `
<div
  className="pull-right"
>
  <span
    className="note big-spacer-right"
  >
    <span
      className="big-spacer-right"
    >
      <span
        className="shortcut-button little-spacer-right"
      >
        ↑
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        ↓
      </span>
      component_measures.to_select_files
    </span>
    <span>
      <span
        className="shortcut-button little-spacer-right"
      >
        ←
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        →
      </span>
      component_measures.to_navigate
    </span>
  </span>
  <div
    className="measure-details-page-actions"
  >
    <DeferredSpinner
      loading={true}
      timeout={100}
    >
      <i
        className="spinner-placeholder"
      />
    </DeferredSpinner>
  </div>
</div>
`;

exports[`should display the total of files 1`] = `
<div
  className="pull-right"
>
  <div
    className="measure-details-page-actions"
  >
    <DeferredSpinner
      loading={true}
      timeout={100}
    >
      <i
        className="spinner-placeholder"
      />
    </DeferredSpinner>
    <FilesCounter
      className="spacer-left"
      current={12}
      total={120}
    />
  </div>
</div>
`;

exports[`should display the total of files 2`] = `
<div
  className="pull-right"
>
  <span
    className="note spacer-right"
  >
    <span>
      <span
        className="shortcut-button little-spacer-right"
      >
        j
      </span>
      <span
        className="shortcut-button little-spacer-right"
      >
        k
      </span>
      component_measures.to_navigate_files
    </span>
  </span>
  <div
    className="measure-details-page-actions"
  >
    <DeferredSpinner
      loading={false}
      timeout={100}
    >
      <i
        className="spinner-placeholder"
      />
    </DeferredSpinner>
    <FilesCounter
      className="spacer-left"
      current={12}
      total={20}
    />
  </div>
</div>
`;

exports[`should not display shortcuts for treemap 1`] = `
<div
  className="pull-right"
>
  <div
    className="measure-details-page-actions"
  >
    <DeferredSpinner
      loading={true}
      timeout={100}
    >
      <i
        className="spinner-placeholder"
      />
    </DeferredSpinner>
  </div>
</div>
`;
